--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,11 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': 'org.example.Application'
+        )
+    }
+}
